--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.2.5
-Flask-Cors==3.0.10
-python-dotenv==0.19.2
-langchain==0.0.329
+flask==2.3.2
+flask-cors==3.0.10
+python-dotenv==1.0.0
+langchain==0.0.271
 langchain-community==0.0.9
 openai==0.27.8
 gunicorn==20.1.0
