--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,145 @@
-# Core dependencies
-setuptools>=69.0.2
-wheel>=0.41.2
-flask==2.3.2
-flask-cors==3.0.10
-python-dotenv==1.0.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anthropic==0.38.0
+anyio==3.7.1
+asgiref==3.8.1
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+blinker==1.8.2
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.3
+chromadb==0.4.22
+click==8.1.7
+cohere==5.11.3
+coloredlogs==15.0.1
+coverage==7.6.4
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+Deprecated==1.2.14
+distro==1.9.0
+durationpy==0.9
+fastapi==0.115.4
+fastavro==1.9.7
+filelock==3.16.1
+Flask==2.3.2
+Flask-Cors==3.0.10
+flatbuffers==24.3.25
+frozenlist==1.5.0
+fsspec==2024.10.0
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
+grpcio==1.67.1
 gunicorn==20.1.0
-
-# Primary dependencies
-typing-extensions>=4.7.0
-pydantic>=1.10.13,<2.0.0
-numpy>=1.26.0
-
-# LLM dependencies
-anthropic>=0.17.0
+h11==0.14.0
+httpcore==0.17.3
+httptools==0.6.4
+httpx==0.24.1
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.7.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+kubernetes==31.0.0
+langchain==0.3.7
+langchain-anthropic==0.2.4
+langchain-cohere==0.3.1
+langchain-community==0.3.7
+langchain-core==0.3.18
+langchain-experimental==0.3.3
+langchain-text-splitters==0.3.2
+langsmith==0.1.139
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+mdurl==0.1.2
+mmh3==5.0.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.20.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.11
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.3
+parameterized==0.9.0
+pluggy==1.5.0
+posthog==3.7.0
+propcache==0.2.0
+protobuf==4.25.5
+pulsar-client==3.5.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+Pygments==2.18.0
+pypdf==5.1.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pytest==8.3.3
+pytest-cov==6.0.0
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9
+setuptools==75.3.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.41.2
+sympy==1.13.3
+tabulate==0.9.0
+tenacity==8.5.0
 tiktoken==0.8.0
-
-# Vector store - using newer version
-chromadb>=0.4.0
-
-# LangChain ecosystem
-langchain-core>=0.1.23
-langchain-anthropic>=0.1.1
-langchain-community>=0.0.13
+tokenizers==0.20.1
+tqdm==4.66.6
+typer==0.12.5
+types-requests==2.32.0.20241016
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websocket-client==1.8.0
+websockets==13.1
+Werkzeug==3.1.1
+wrapt==1.16.0
+yarl==1.17.1
+zipp==3.20.2
