--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -127,6 +127,8 @@ tabulate==0.9.0
 tenacity==8.5.0
 tiktoken==0.8.0
 tokenizers==0.20.1
+transformers
+torch
 tqdm==4.66.6
 typer==0.12.5
 types-requests==2.32.0.20241016
