--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -60,6 +60,7 @@ langchain-cohere==0.3.1
 langchain-community==0.3.7
 langchain-core==0.3.18
 langchain-experimental==0.3.3
+langchain-chroma==0.1.4
 langchain-text-splitters==0.3.2
 langsmith==0.1.139
 markdown-it-py==3.0.0
@@ -111,7 +112,7 @@ python-dotenv==1.0.0
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.9.11
-requests==2.32.3
+requests==2.31.0
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
