--- a/render.yaml
+++ b/render.yaml
@@ -40,7 +40,7 @@ services:
       - key: CHUNK_OVERLAP
         value: 200
       - key: VECTOR_STORE_SIMILARITY_THRESHOLD
-        value: 0.3
+        value: "0.3"
       - key: VECTOR_STORE_TOP_K
         value: 8
       - key: LLM_TEMPERATURE
