--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,16 @@
 services:
   - type: web
-    name: rag-game-assistant
+    name: rag-game-assistant-backend
     env: python
-    region: oregon  # Choose your preferred region
-    plan: starter  # Adjust based on your needs
-    buildCommand: |
-      python -m pip install --upgrade pip
-      cd backend
-      pip install -r requirements.txt
-      python deployment_test.py
+    buildCommand: cd backend && pip install --upgrade pip && pip install -r requirements.txt
     startCommand: >
-      cd backend && gunicorn app.main:create_app() 
-      --timeout 180 
-      --workers 2 
-      --threads 4 
-      --worker-class gthread 
-      --log-level info 
-      --bind 0.0.0.0:$PORT 
-      --preload
+      cd backend && gunicorn "app.main:create_app()" 
+      --timeout 300 
+      --workers 1
+      --threads 4
+      --worker-class gthread
+      --log-level info
+      --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.12
@@ -28,29 +21,23 @@ services:
       - key: CACHE_DIR
         value: /opt/render/project/src/backend/.cache
       - key: ANTHROPIC_API_KEY
-        sync: false  # Mark as secret
+        sync: false
       - key: COHERE_API_KEY
-        sync: false  # Mark as secret
+        sync: false
       - key: ALLOWED_ORIGIN
-        sync: false  # Configure in Render dashboard
-      - key: MAX_CHUNK_SIZE
-        value: 4500
-      - key: CHUNK_SIZE
-        value: 2000
-      - key: CHUNK_OVERLAP
-        value: 200
+        sync: false
       - key: VECTOR_STORE_SIMILARITY_THRESHOLD
         value: "0.3"
       - key: VECTOR_STORE_TOP_K
-        value: 8
+        value: "8"
       - key: LLM_TEMPERATURE
-        value: 0.3
+        value: "0.3"
       - key: LLM_MAX_TOKENS
-        value: 4096
+        value: "4096"
       - key: MMR_DIVERSITY_SCORE
-        value: 0.3
+        value: "0.3"
     healthCheckPath: /api/
-    autoDeploy: false  # Set to false for controlled deployments
+    autoDeploy: true
     disk:
       name: cache
       mountPath: /opt/render/project/src/backend/.cache
