--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,16 @@ services:
     buildCommand: cd backend && pip install --upgrade pip && pip install -r requirements.txt
     startCommand: >
       cd backend && gunicorn "app.main:create_app()" 
-      --timeout 300 
-      --workers 1
+      --timeout 120
+      --workers 2
       --threads 4
       --worker-class gthread
+      --max-requests 1000
+      --max-requests-jitter 50
+      --backlog 100
       --log-level info
       --bind 0.0.0.0:$PORT
+      --preload
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.12
@@ -29,13 +33,15 @@ services:
       - key: VECTOR_STORE_SIMILARITY_THRESHOLD
         value: "0.3"
       - key: VECTOR_STORE_TOP_K
-        value: "8"
+        value: "4"  # Reduced from 8
       - key: LLM_TEMPERATURE
         value: "0.3"
       - key: LLM_MAX_TOKENS
-        value: "4096"
+        value: "2048"  # Reduced from 4096
       - key: MMR_DIVERSITY_SCORE
         value: "0.3"
+      - key: WEB_CONCURRENCY  # For gunicorn
+        value: "2"
     healthCheckPath: /api/
     autoDeploy: true
     disk:
@@ -50,7 +56,7 @@ services:
     staticPublishPath: ./frontend/build
     envVars:
       - key: REACT_APP_BACKEND_URL
-        value: https://rag-game-assistant.onrender.com # Change to your backend URL
+        value: https://rag-game-assistant.onrender.com
     headers:
       - path: /*
         name: Cache-Control
