--- a/render.yaml
+++ b/render.yaml
@@ -3,19 +3,7 @@ services:
     name: rag-game-assistant-backend
     env: python
     buildCommand: cd backend && pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: >
-      cd backend && gunicorn "app.main:create_app()" 
-      --timeout 300
-      --workers 2
-      --threads 4
-      --worker-class gthread
-      --max-requests 1000
-      --max-requests-jitter 50
-      --backlog 100
-      --log-level info
-      --bind 0.0.0.0:$PORT
-      --keep-alive 5
-      --graceful-timeout 30
+    startCommand: cd backend && gunicorn --config gunicorn_config.py "app.main:create_app()"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.12
@@ -31,24 +19,17 @@ services:
         sync: false
       - key: ALLOWED_ORIGIN
         sync: false
-      - key: VECTOR_STORE_SIMILARITY_THRESHOLD
-        value: "0.3"
+      # Reduce batch sizes and limits
       - key: VECTOR_STORE_TOP_K
-        value: "4"  # Reduced from 8
-      - key: LLM_TEMPERATURE
-        value: "0.3"
+        value: "4"
       - key: LLM_MAX_TOKENS
-        value: "2048"  # Reduced from 4096
-      - key: MMR_DIVERSITY_SCORE
-        value: "0.3"
-      - key: WEB_CONCURRENCY  # For gunicorn
-        value: "2"
+        value: "2048"
+      - key: CHUNK_SIZE
+        value: "1000"
+      - key: CHUNK_OVERLAP
+        value: "100"
     healthCheckPath: /api/
     autoDeploy: true
-    disk:
-      name: cache
-      mountPath: /opt/render/project/src/backend/.cache
-      sizeGB: 1
 
   - type: web
     name: rag-game-assistant-frontend
@@ -62,7 +43,3 @@ services:
       - path: /*
         name: Cache-Control
         value: no-cache
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
