--- a/render.yaml
+++ b/render.yaml
@@ -4,36 +4,36 @@ services:
     env: python
     buildCommand: cd backend && pip install --upgrade pip && pip install -r requirements.txt
     startCommand: >
-      cd backend && gunicorn "app.main:create_app()" 
-      --timeout 120
+      cd backend && gunicorn 
       --workers 1
       --threads 4
-      --worker-class gthread
-      --max-requests 100
-      --max-requests-jitter 20
-      --log-level debug
+      --timeout 120
       --bind 0.0.0.0:$PORT
-      --preload
-      --worker-tmp-dir /dev/shm
+      --access-logfile '-'
+      --error-logfile '-'
+      --log-level debug
+      "app.main:create_app()"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.12
-      - key: FLASK_DEBUG
+      - key: FLASK_ENV
+        value: production
+      - key: FLASK_DEBUG 
         value: false
       - key: ENABLE_CACHE
         value: true
       - key: CACHE_DIR
-        value: /opt/render/project/src/backend/.cache
+        value: /opt/render/project/src/.cache
       - key: ANTHROPIC_API_KEY
         sync: false
       - key: COHERE_API_KEY
-        sync: false
+        sync: false  
       - key: ALLOWED_ORIGIN
-        sync: false
+        value: "https://rag-game-assistant-frontend.onrender.com"
       - key: VECTOR_STORE_TOP_K
         value: "3"
       - key: LLM_MAX_TOKENS
-        value: "1024"
+        value: "1024" 
       - key: CHUNK_SIZE
         value: "500"
       - key: CHUNK_OVERLAP
@@ -50,8 +50,11 @@ services:
     staticPublishPath: ./frontend/build
     envVars:
       - key: REACT_APP_BACKEND_URL
-        value: https://rag-game-assistant.onrender.com
+        value: "https://rag-game-assistant-backend.onrender.com"
     headers:
       - path: /*
         name: Cache-Control
         value: no-cache
+      - path: /*  
+        name: Access-Control-Allow-Origin
+        value: "*"
